Register form, Routes & Bootstrap

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head>       
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+        <meta name="description" content="{% block metadescription %}{% endblock %}">
+        <meta name="keywords" content="{% block keywords %}{% endblock %}">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>        
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     </head>
     <body>
         {% block body %}{% endblock %}
